--- a/Test codes/h_test/motor_tuning/MDK-ARM/motor_tuning/motor_tuning.build_log.htm
+++ b/Test codes/h_test/motor_tuning/MDK-ARM/motor_tuning/motor_tuning.build_log.htm
@@ -21,13 +21,28 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.0.1.0
 Dialog DLL:      TCM.DLL V1.34.0.0
  
 <h2>Project:</h2>
-C:\Users\Prashant\Documents\ROBOCON_2019\Test codes\h_test\motor_tuning\MDK-ARM\motor_tuning.uvprojx
+C:\Users\Prashant\Desktop\motor_tuning\MDK-ARM\motor_tuning.uvprojx
 Project File Date:  10/08/2018
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'motor_tuning'
-"motor_tuning\motor_tuning.axf" - 0 Error(s), 0 Warning(s).
+compiling tim.c...
+compiling robot.c...
+compiling main.c...
+compiling robo_init.c...
+compiling wheel.c...
+compiling drive.c...
+compiling encoder.c...
+..\Core\Src\encoder.c(68): warning:  #175-D: subscript out of range
+  	d24 = (e[2].distance + e[4].distance)/2;
+..\Core\Src\encoder.c(71): warning:  #175-D: subscript out of range
+  	theta += ((e[3].distance - e[1].distance + e[4].distance - e[2].distance)/WIDTH);//*(180/3.14159265359) //here the theta is in radian
+..\Core\Src\encoder.c: 2 warnings, 0 errors
+linking...
+Program Size: Code=20784 RO-data=928 RW-data=36 ZI-data=1588  
+FromELF: creating hex file...
+"motor_tuning\motor_tuning.axf" - 0 Error(s), 2 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -50,7 +65,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.1.2
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:28
 </pre>
 </body>
 </html>
