--- a/Base/motor_tuning/MDK-ARM/motor_tuning/motor_tuning.build_log.htm
+++ b/Base/motor_tuning/MDK-ARM/motor_tuning/motor_tuning.build_log.htm
@@ -27,6 +27,14 @@ Project File Date:  10/08/2018
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'motor_tuning'
+compiling main.c...
+compiling robo_init.c...
+compiling robot.c...
+compiling encoder.c...
+compiling drive.c...
+linking...
+Program Size: Code=23652 RO-data=932 RW-data=36 ZI-data=1588  
+FromELF: creating hex file...
 "motor_tuning\motor_tuning.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -50,7 +58,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.1.2
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:00:17
 </pre>
 </body>
 </html>
