--- a/Base/uart_pakka_chalcha/MDK-ARM/uart_pakka_chalcha/uart_pakka_chalcha.build_log.htm
+++ b/Base/uart_pakka_chalcha/MDK-ARM/uart_pakka_chalcha/uart_pakka_chalcha.build_log.htm
@@ -21,19 +21,34 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.0.1.0
 Dialog DLL:      TCM.DLL V1.34.0.0
  
 <h2>Project:</h2>
-C:\Users\Prashant\Desktop\uart_pakka_chalcha\MDK-ARM\uart_pakka_chalcha.uvprojx
+C:\Users\Prashant\Documents\ROBOCON_2019\Base\uart_pakka_chalcha\MDK-ARM\uart_pakka_chalcha.uvprojx
 Project File Date:  11/20/2018
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'uart_pakka_chalcha'
+compiling encoder.c...
 compiling communication.c...
-compiling main.c...
+compiling drive.c...
+..\Core\Src\drive.c(27): warning:  #174-D: expression has no effect
+  			Wheel_arr[i].next_velocity = -ROBOT_VELOCITY;																																																																	ROBOT_VELOCITY;
+..\Core\Src\drive.c: 1 warning, 0 errors
+compiling robo_init.c...
+compiling wheel.c...
+compiling pid.c...
+..\Core\Src\pid.c(71): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+  	return (double)((12*spid->output)/MAX_OMEGA);
+..\Core\Src\pid.c: 1 warning, 0 errors
 compiling robot.c...
+compiling main.c...
+../Core/Src/main.c(129): warning:  #550-D: variable "ok"  was set but never used
+    int ok;
+../Core/Src/main.c: 1 warning, 0 errors
+compiling tim.c...
 linking...
-Program Size: Code=12632 RO-data=504 RW-data=76 ZI-data=2220  
+Program Size: Code=20788 RO-data=940 RW-data=152 ZI-data=2704  
 FromELF: creating hex file...
-"uart_pakka_chalcha\uart_pakka_chalcha.axf" - 0 Error(s), 0 Warning(s).
+"uart_pakka_chalcha\uart_pakka_chalcha.axf" - 0 Error(s), 3 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -56,7 +71,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.1.2
-Build Time Elapsed:  00:00:12
+Build Time Elapsed:  00:00:28
 </pre>
 </body>
 </html>
